Added scraping of addresses, times, and ticket links
Hard coded Bruno Mars as the artist of choice!

--- a/map/concerts/templates/concerts/map.html
+++ b/map/concerts/templates/concerts/map.html
@@ -22,11 +22,10 @@
       google.charts.setOnLoadCallback(drawMap);
 
       function drawMap() {
-        var a = {{ sample_addresses | js }};
+        var a = {{ data | js }};
         var data = google.visualization.arrayToDataTable(a);
 
         var options = {
-          showTooltip: true,
           showInfoWindow: true
         };
 
