--- a/map/concerts/templates/concerts/map.html
+++ b/map/concerts/templates/concerts/map.html
@@ -1,5 +1,7 @@
+<!doctype html>
 <html>
   <head>
+    <title>Map</title>
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
