--- a/map/concerts/templates/concerts/index.html
+++ b/map/concerts/templates/concerts/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>ConcertMap</title>
+    <title>Login</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <style type="text/css">
       .main {
