--- a/map/concerts/templates/concerts/index.html
+++ b/map/concerts/templates/concerts/index.html
@@ -2,25 +2,24 @@
 <html>
   <head>
     <title>Login</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <style type="text/css">
-      .main {
-        margin: 0;
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <style>
+    .center {
+             position: absolute;
+             top: 40%;
+             left: 50%;
+             transform: translate(-50%, -50%);
+            }
     </style>
   </head>
 
   <body>
-    <div class="main">
-      <p style="text-align:center;">
-        <img src="/static/concerts/logo.png" alt="ConcertMap" height="300" width="300"/>
-        <br/><br/>
-        <a href={{ authorize_url }} class="btn btn-lg btn-primary">Log in with Spotify</a>
-      </p>
-    </div>
+      <div class="center">
+        <center>
+          <img src="/static/concerts/logo.png" alt="ConcertMap" height="300" width="300"/>
+          <br/><br/>
+          <a href={{ authorize_url }} class="btn btn-lg btn-info btn-outline-info">Log in with Spotify</a>
+        </center>
+      </div>
   </body>
 </html>
