--- a/map/concerts/templates/concerts/table.html
+++ b/map/concerts/templates/concerts/table.html
@@ -2,16 +2,21 @@
 <html>
   <head>
     <title>Table</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <style type="text/css">
       .main {
-        margin: 0;
         position: absolute;
-        top: 10%;
+        top: 1rem;
         left: 50%;
         transform: translate(-50%, 0%);
         width: 60%;
       }
+      a {
+        color: #17a2b8;
+      }
+      a:hover {
+               color: #138496;
+              }
     </style>
   </head>
 
@@ -20,7 +25,7 @@
     	<table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
 				<thead>
 					<tr>
-						<th>Ranking</th>
+						<th>Rank</th>
 						<th>Artist</th>
 						<th>Map</th>
 					</tr>
