--- a/map/concerts/templates/concerts/table.html
+++ b/map/concerts/templates/concerts/table.html
@@ -1,50 +1,69 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Table</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <style type="text/css">
-      .main {
-        position: absolute;
-        top: 1rem;
-        left: 50%;
-        transform: translate(-50%, 0%);
-        width: 60%;
-      }
-      a {
-        color: #17a2b8;
-      }
-      a:hover {
-               color: #138496;
-              }
-    </style>
-  </head>
+<head>
+  <title>Table</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <style type="text/css">
+  .main {
+    position: absolute;
+    top: 1rem;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    width: 60%;
+  }
+  a {
+    color: #17a2b8;
+  }
+  a:hover {
+   color: #138496;
+ }
+ </style>
+</head>
 
-  <body>
-  	<div class="main">
-    	<table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
-				<thead>
-					<tr>
-						<th>Rank</th>
-						<th>Artist</th>
-						<th>Map</th>
-					</tr>
-				</thead>
-				<tbody>
-					{% for artist, identifier in top_artists %}
-						<tr>
-							<td>{{ forloop.counter }}</td>
-							<td>{{ artist }}</td>
-							{% if identifier %}
-								<td><a target=_blank href={{ identifier }}>Upcoming concerts for {{ artist }}</a></td>
-							{% else %}
-								<td>{{ artist }} has no upcoming concerts</td>
-							{% endif %}
-						</tr>
-					{% endfor %}
-				</tbody>
-			</table>
-		</div>
-  </body>
+<body>
+  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">Concert Finder</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="/concerts/form/">Return <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.spotify.com/logout/">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="main">
+   <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
+    <thead>
+     <tr>
+      <th>Rank</th>
+      <th>Artist</th>
+      <th>Map</th>
+    </tr>
+  </thead>
+  <tbody>
+   {% for artist, identifier in top_artists %}
+   <tr>
+     <td>{{ forloop.counter }}</td>
+     <td>{{ artist }}</td>
+     {% if identifier %}
+     <td><a target=_blank href={{ identifier }}>Upcoming concerts for {{ artist }}</a></td>
+     {% else %}
+     <td>{{ artist }} has no upcoming concerts</td>
+     {% endif %}
+   </tr>
+   {% endfor %}
+ </tbody>
+</table>
+</div>
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+</body>
 </html>
 
