Finished with jQuery!
Table loads in real time. Changed icon as well.

--- a/map/concerts/templates/concerts/form.html
+++ b/map/concerts/templates/concerts/form.html
@@ -55,7 +55,7 @@
             </select>
           </div>
           <br/>
-          <input type="submit" value="Find concerts" class="btn btn-lg btn-info btn-outline-info"></input>
+          <input type="submit" value="Find concerts" class="btn btn-lg btn-primary btn-outline-primary"></input>
         </center>
       </div>
     </form>
