--- a/map/concerts/templates/concerts/index.html
+++ b/map/concerts/templates/concerts/index.html
@@ -18,7 +18,7 @@
         <center>
           <img src="/static/concerts/logo.png" alt="ConcertMap" height="300" width="300"/>
           <br/><br/>
-          <a href={{ authorize_url }} class="btn btn-lg btn-info btn-outline-info">Log in with Spotify</a>
+          <a href={{ authorize_url }} class="btn btn-lg btn-primary btn-outline-primary">Log in with Spotify</a>
         </center>
       </div>
   </body>
