--- a/map/concerts/templates/concerts/map.html
+++ b/map/concerts/templates/concerts/map.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Map</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -14,12 +15,6 @@
         margin: 0;
         padding: 0;
       }
-      a {
-        color: #17a2b8;
-      }
-      a:hover {
-               color: #138496;
-              }
     </style>
 
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
