--- a/map/concerts/templates/concerts/table.html
+++ b/map/concerts/templates/concerts/table.html
@@ -56,7 +56,7 @@
     {% load js %}
     var a = {{ top_artists | js }};
     jQuery.each(a, function( i, val ) {
-                                       $.getJSON("http://api.songkick.com/api/3.0/search/artists.json?apikey=cXZIiAYhAxu4hSUU&query=" + 
+                                       $.getJSON("http://api.songkick.com/api/3.0/search/artists.json?apikey=cXZIiAYhAxu4hSUU&per_page=1&query=" + 
                                          encodeURI(val.replace(/\s/g, '_')), 
                                         function(data) {
                                                         var page = data.resultsPage
