--- a/map/concerts/templates/concerts/table.html
+++ b/map/concerts/templates/concerts/table.html
@@ -2,36 +2,35 @@
 <html>
 <head>
   <title>Table</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet">
   <style type="text/css">
   .main {
-    position: absolute;
-    top: 1rem;
-    left: 50%;
-    transform: translate(-50%, 0%);
     width: 60%;
+    padding-top: 1rem;
+  }
+  .bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1%;
+  }
+  .title {
+    font-size: 84px;
+    font-family: 'Codystar', cursive;
   }
   </style>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">Concert Finder</a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/concerts/">Return <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.spotify.com/logout/">Logout</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div class="bar">
+    <a href="http://127.0.0.1:8000/concerts/form/?code={{ code }}" class="btn btn-lg btn-primary btn-outline-primary" style="margin-left: 2%">Return</a>
+    <h1 class="title">Concert Finder</h1>
+    <a href="/concerts" class="btn btn-lg btn-primary btn-outline-primary" id="logout" style="margin-right: 2%">Logout</a>
+  </div>
+  <hr style="margin: 0;"/>
+  <center>
   <div class="main">
     <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
       <thead>
@@ -52,6 +51,7 @@
       </tbody>
     </table>
   </div>
+  </center>
   <script>
     {% load js %}
     var a = {{ top_artists | js }};
@@ -77,9 +77,9 @@
                                                 );
                                       }
                );
+    $('#logout').click(function () {var temp = window.open();
+                                    temp.addEventListener('load', function() {temp.close('https://www.spotify.com/us/logout');});
+                                   })
   </script>
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 </html>
