Got bvec and cvec
Sorry for the late commit!

--- a/map/concerts/templates/concerts/form.html
+++ b/map/concerts/templates/concerts/form.html
@@ -3,7 +3,7 @@
   <head>
     <title>Finder</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <style type="text/css">
       .center {
                position: absolute;
@@ -49,7 +49,7 @@
            }
       .title {
               font-size: 84px;
-              font-family: 'Codystar', cursive;
+              font-family: 'Poiret One', cursive;
              }
       img {
            padding: 20px;
