--- a/map/concerts/templates/concerts/table.html
+++ b/map/concerts/templates/concerts/table.html
@@ -3,7 +3,7 @@
 <head>
   <title>Table</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
   <style type="text/css">
   .main {
     width: 60%;
@@ -16,8 +16,8 @@
     margin-top: 1%;
   }
   .title {
-    font-size: 56px;
-    font-family: 'Press Start 2P', cursive;
+    font-size: 72px;
+    font-family: 'Poiret One', cursive;
   }
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
