--- a/map/concerts/templates/concerts/map.html
+++ b/map/concerts/templates/concerts/map.html
@@ -1,37 +1,50 @@
 <!doctype html>
 <html>
 <head>
-  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <a class="navbar-brand" href="#">Concert Finder</a>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" onclick="javascript:window.close()" href="">Return</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <h1 align="center">{{ name }}</h1>
   <title>Map</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+   <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
   <style>
       /* Always set the map height explicitly to define the size of the div
       * element that contains the map. */
       #chart_div {
-        height: 100%;
+        height: 90%;
+        width: 80%;
+        margin: auto;
+        margin-bottom: 3%;
+        margin-top: 2%;
       }
       /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
       .column{
         float: left;
-        width: 50%;
+        width: 38%;
+        margin-left: 6%;
+        margin-right: 6%;
+
+      }
+      .bar {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 1%;
+      }
+      .title {
+        font-size: 72px;
+        font-family: 'Poiret One', cursive;
+      }
+      p {
+        text-indent: 50px;
+      }
+
+      h1 {
+        margin-bottom: 4%;
+        font-size: 72px;
+        font-family: 'Poiret One';
+      }
+
+
+      h3 {
+        margin-bottom: : 4%;
       }
       </style>
 
@@ -63,34 +76,49 @@
       </script>
     </head>
     <body>
+     <div class="bar">
+      <a onclick="javascript:window.close()" class="btn btn-lg btn-primary btn-outline-primary" style="margin-left: 2%">Return</a>
+      <h1 class="title">Concert Finder</h1>
+      <a href="/concerts" class="btn btn-lg btn-primary btn-outline-primary" style="margin-right: 2%">Logout</a>
+    </div>
+    <div id='map'>
+      <div id="chart_div"></div>
+    </div>
 
-      <div class="column">
-        <div class="main">
-         <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
-          <thead>
-           <tr>
-            <th></th>
-            <th>Date</th>
-            <th>Venue</th>
-            <th>City</th>
-          </tr>
-        </thead>
-        <tbody>
-         {% for Date, Venue, City in table_data %}
+    <h1 align=center><b>{{ name }}</b></h1>
+
+
+    <div class="column">
+      <h3 align=center>Tour Dates</h3>
+      <div class="main">
+       <table cellpadding="0" cellspacing="0" border="0" class="datatable table table-striped table-bordered">
+        <thead>
          <tr>
-           <td>{{ forloop.counter }}</td>
-           <td>{{ Date }}</td>
-           <td>{{ Venue }}</td>
-           <td>{{ City }}</td>
-         </tr>
-         {% endfor %}
-       </tbody>
-     </table>
-   </div>
+          <th></th>
+          <th>Date</th>
+          <th>Venue</th>
+          <th>City</th>
+        </tr>
+      </thead>
+      <tbody>
+       {% for Date, Venue, City in table_data %}
+       <tr>
+         <td>{{ forloop.counter }}</td>
+         <td>{{ Date }}</td>
+         <td>{{ Venue }}</td>
+         <td>{{ City }}</td>
+       </tr>
+       {% endfor %}
+     </tbody>
+   </table>
  </div>
- <div class="column">
+</div>
+<div class="column">
+ <h3 align=center>About</h3>
+ <p>{{ bio }}</p>
+</div>
 
-  <div id="chart_div"></div>
+
 
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGJH48WTSTLfykQaM-d-LHlVTT1Z0qVYY&callback=initMap">
